See `org.eclipse.sirius.web.sample.configuration.DomainPropertiesConfigurer` and `org.eclipse.sirius.web.sample.services.DomainAttributeServices` for a working example that can be easily adapted.

== v2023.4.0

=== Architectural decision records

- [ADR-094] Provide better control on contextual palette's content
- [ADR-095] Use richer data types in the View DSL definition
- [ADR-096] Distinguish the containment kind of view creation requests
- [ADR-097] Separate the layout data structures from the diagram data structures

=== Breaking changes

- https://github.com/eclipse-sirius/sirius-components/issues/1643[1643] [core] Removed our dependencies to Spring Security
- https://github.com/eclipse-sirius/sirius-components/issues/1592[#1592] [view] In View-based diagram definition, all tools applicable on a given element are now configured inside the new _Palette_ element directly inside the element (diagram, node or edge) description.
- https://github.com/eclipse-sirius/sirius-components/issues/1761[#1761] [core] Remove `sirius-web-graphql-schema` since it was not really used anymore
- https://github.com/eclipse-sirius/sirius-components/issues/1825[#1825] [diagram] Distinguish the containment kind of view creation requests
- https://github.com/eclipse-sirius/sirius-components/issues/1840[#1840] [diagram] The GraphQL field Diagram#autoLayout has been removed.
We only use DiagramDescription#autoLayout to retrieve the autolayout state of a diagram.
- https://github.com/eclipse-sirius/sirius-components/issues/1638[#1638] [view] The lifecycle of the representation descriptions from the view DSL is now aligned with the lifecycle of the metamodels computed from the Domain DSL.
+
As such, the representation descriptions available for an `EditingContext` are now computed and transformed when the `EditingContext` is loaded.
It will thus improve the performances of the lookup for representation descriptions since they will be referenced directly by the `EditingContext`.